<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WaterServicePlatform</string>
    <string name="tab_text_1">General</string>
    <string name="tab_text_2">Add Photo</string>
    <string name="tab_text_3">Location</string>
    <string name="tab_text_4">Send</string>
    <string name="Fragment2">Add Photo</string>
    <string name="Fragment3">Location</string>
    <string name="codeButton">Send Code</string>
    <string name="enter_phone">Please enter your phone number.</string>
    <string name="confirm_explanation">To make sure, that this is a valid report we need your phone
        number. You will receive a code which you need to verify your phone number.</string>
    <string name="codeText">Please enter your received code.</string>
    <string name="confirmButton">Next ></string>
    <string name="phone_hint">"Phone number"</string>
    <string name="codeNumber">"Code</string>
    <string name="seekbarText">Please specify how intense the leakage is.</string>
    <string name="idPipeText">If available, enter the ID written on the pipe.</string>
    <string name="idPipe_hint">Pipe ID</string>
    <string name="addInfoText">If you have more information, add them here.</string>
    <string name="addInfo_hint">Add information</string>
    <string name="photoText">You can add pictures (optional and 3 max).</string>
    <string name="back">&lt; Back </string>
    <string name="send">Send ></string>
    <string name="incorrect_code">The code is not correct.</string>
    <string name="confirmation_end">Confirmation completed.</string>
    <string name="code_is">Your code is </string>
    <string name="leak_location">Your leak location</string>
    <string name="kenya_loc">The location must be in Kenya.</string>
    <string name="perm_request">Requesting permission</string>
    <string name="perm_explain_gps">We can get your position automatically if you allow us to do so.</string>
    <string name="perm_denined">Permission denied</string>
    <string name="perm_denined_explain_gps">If you reject permission, you can not use your location.\n
                        Please turn on permissions at [Setting] > [Permission]</string>
    <string name="perm_denined_explain_pic">If you reject permission, you cannot send pictures.\n
                            Please turn on permissions at [Setting] > [Permission]</string>
    <string name="perm_explain_pic">We need to get access to your storage to send pictures.</string>
    <string name="done">Done</string>
    <string name="no_select">No Select</string>
    <string name="missing_data">Some required fields are missing.</string>
    <string name="send_confirm">Sending confirmation</string>
    <string name="send_as">You are about to send your report as  </string>
    <string name="confirm">Confirm</string>
    <string name="report_sent">Report successfully sent.</string>
    <string name="cancel">Cancel</string>
    <string name="perm_explain_phone">We can automatically verify your number if you give us the permission to read your SMS, else you will have to do it manually.</string>
    <string name="valid_number">Please enter a valid phone number.</string>
</resources>
