<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    android:id="@+id/photoFragment">

    <TextView
        android:id="@+id/textPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photoText"
        android:textSize="6pt"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="30dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="30dp"
        android:numColumns="3"
        android:columnWidth="200px"
        android:stretchMode="spacingWidthUniform"
        android:layout_below="@+id/textPhoto" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/pickImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/continueBar"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_add_white_18dp"/>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/continueBar">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:textColor="@color/white"
            android:text="@string/back"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/codeButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:text="@string/confirmButton"/>
    </RelativeLayout>

</RelativeLayout>